@@ -1,6 +1,6 @@
 DIST libcec-1.6.2.tar.gz 929364 SHA256 2d853df4478a9b93ef699c7038cf78a97741b1a594996d1df644f2d5e51d6969 SHA512 6b42c6810ebc6819e1cf1c806a25d8ca5ccc6786d4026a595e7b86336f7cb087d80e9daf464f3bbccb2fa3d009f551fdcb616d5b5ddea2d8db42b28499786dcd WHIRLPOOL 2d78ab7885a04975b7c283041a33747a09b7444bedba27f2cd3057558f255ce3a8c60766766664685c79cf4fd19b35cf7f13281c8eace605891c2948a0a1a9ce
-DIST libcec-2.0.1.tar.gz 1075626 SHA256 3dc6d7080a98dbfddcab4605a1267c24751b4334a95f845583f34d9f24c9269a SHA512 ffb99be8db11402a4bb38270e3e6b4d0fdfb6271b0f7746d98f7dcf16069a836a540f6fc8e56bbcb405ac106966ae40c4cc82fbe3f9c21289f090834d937c665 WHIRLPOOL fb400f6e0d76ffe4e8bfb5c006ef9365d547809e9629931daa6bcc181b58b864e5615459a3903a1833775676275c33f100fa309ab2a6d60e8b92ccf2daf0d308
+DIST libcec-2.0.2.tar.gz 1076001 SHA256 a61d1b550caa5a9b744df67a002f35a06486e373f79a167cedbc8583fa9c003c SHA512 634f0ebab4f2b98fe417a221daa83087976c0c01f7f062ee9c9a26ec3c97ac45eb6c7131712e986a76515e8b5de3fa74785f22df6f17be5f8039a0a53061f0a8 WHIRLPOOL 20859af654998cd8578d7ffa6c830c70f3f29de0a5d189bed3effc9036b6c7ee412f75960f3ee68975f2d0d94e70a88d7ad1098c8d760725337829a7ed798233
 EBUILD libcec-1.6.2.ebuild 853 SHA256 fa9b08dc7aa33cd6cfe3f671bef703b20a66b580adc086989d93598e97c4bc5f SHA512 f1060803143408d2ddef5d2ce5e8eed02d75e2dced3856e9771522740a93ac1a6c2feae91dbd0700532e6530bebdfc46c1f2e1fe7ab36e9d7caf90c11695aaf0 WHIRLPOOL 66eed9fe96f0744f83ed6b041113cc8133f8a41925c399ed75f166ebe2db076140ffe660ac8ac2011f0aa4169d8d65d2cdb015811518911254c47df69a2f9399
-EBUILD libcec-2.0.1.ebuild 881 SHA256 ac2138930648a632d4269cd597e03b6ff8cd3b61bb2edd85dc44ab13458460f7 SHA512 64371b615cf273c90d4aeeca3ad211283adc2a84a3d40b6669bd4828fbc4aaa74de12065696dfbb4016f40ed2f0b0ebaeef8b7eaaa240ea934e5e0ccc2f37c9c WHIRLPOOL 8dea6c0c9eb937a3c44bee1d4c5d6185546d9a2d0460f42cf700489b1c45cdd1d7cf7964f7c16e9588d5ea7f7e25bdf630439e5aee553c29750004e925b0c500
-MISC ChangeLog 2479 SHA256 d6ce5f366b1e7d2a4cd06b0a3653fa99f69dc531b4f59a0bb60e006904876ed6 SHA512 8540729a1167a74ecb49df567a0d1052ee0957bb83eaf8a283a0077a334e1aba6eb1430da39aed16a2dc561ee819ddf7f14d4ea55a445ff86f7384d213175d4f WHIRLPOOL c23d5a0c89b1e3e17f27c2bba0c854c31542ed7dc5f65d74ed1136f39579d9baf8f08ce0cc2a9cfeb34fb8d5bfded53b23307bf715a08b85770f02d2a8e6d23a
+EBUILD libcec-2.0.2.ebuild 881 SHA256 ac2138930648a632d4269cd597e03b6ff8cd3b61bb2edd85dc44ab13458460f7 SHA512 64371b615cf273c90d4aeeca3ad211283adc2a84a3d40b6669bd4828fbc4aaa74de12065696dfbb4016f40ed2f0b0ebaeef8b7eaaa240ea934e5e0ccc2f37c9c WHIRLPOOL 8dea6c0c9eb937a3c44bee1d4c5d6185546d9a2d0460f42cf700489b1c45cdd1d7cf7964f7c16e9588d5ea7f7e25bdf630439e5aee553c29750004e925b0c500
+MISC ChangeLog 2635 SHA256 324ad83a9ee172534fb1f4dc64195688f894338e382316e0c966de95ac444447 SHA512 bbbb497cab4ed91b0d7b6e95fb4c2234c8a22f5599ebafbcd8e3ee7c9f2bd11149d046a4e7ff2f6767770dfb55cdc6c8920276c04b4976a561f6c4b4bac7a892 WHIRLPOOL c94879d1fc285d58342e53cca8029b23cbb7486c01d9dc0ec4a4eb1be88a61676c837bf8d176d7b4aee9715d097684a2ebba27c653bd26292a10e5a19098a639
 MISC metadata.xml 232 SHA256 3e0886d31df5e2b8735dfa995ed12280c69f959a90a4e9d54bafd527110282a3 SHA512 ffd6f191fa1e2510e4c12c4b6c0b2240f188577b38b6b4ca297be5dd4424b352b24b6ff5ceccd06c0b2fcf55b2a372980bf8b980e2915334ba820ebdcdc149d8 WHIRLPOOL 47858cf96e435c48f17bc5abc285679acfcc01927852d6809a02c7610b16b81b145f23673070e1f3ae7354dd3876f882f6f00e2ba7320f50150b5c13f140e75b
